--- a/src/pretix/control/templates/pretixcontrol/event/settings.html
+++ b/src/pretix/control/templates/pretixcontrol/event/settings.html
@@ -48,6 +48,10 @@
             {% bootstrap_field sform.invoice_address_required layout="horizontal" %}
             {% bootstrap_field sform.invoice_address_vatid layout="horizontal" %}
             {% bootstrap_field sform.tax_rate_default layout="horizontal" %}
+            {% bootstrap_field sform.invoice_generate layout="horizontal" %}
+            {% bootstrap_field sform.invoice_language layout="horizontal" %}
+            {% bootstrap_field sform.invoice_address_from layout="horizontal" %}
+            {% bootstrap_field sform.invoice_additional_text layout="horizontal" %}
         </fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
