--- a/src/pretix/control/templates/pretixcontrol/event/permissions.html
+++ b/src/pretix/control/templates/pretixcontrol/event/permissions.html
@@ -18,6 +18,7 @@
                             <th>{% trans "View orders" %}</th>
                             <th>{% trans "Change orders" %}</th>
                             <th>{% trans "Change permissions" %}</th>
+                            <th>{% trans "Change vouchers" %}</th>
                             <th>{% trans "Delete" %}</th>
                         </tr>
                     </thead>
@@ -30,6 +31,7 @@
                                 <td>{{ form.can_view_orders }}</td>
                                 <td>{{ form.can_change_orders }}</td>
                                 <td>{{ form.can_change_permissions }}</td>
+                                <td>{{ form.can_change_vouchers }}</td>
                                 <td>{{ form.DELETE }}</td>
                             </tr>
                         {% endfor %}
@@ -46,6 +48,7 @@
                             <td>{{ add_form.can_view_orders }}</td>
                             <td>{{ add_form.can_change_orders }}</td>
                             <td>{{ add_form.can_change_permissions }}</td>
+                            <td>{{ add_form.can_change_vouchers }}</td>
                         </tr>
                     </tbody>
                 </table>
