Fixed settings form for resend link

--- a/src/pretix/control/templates/pretixcontrol/event/mail.html
+++ b/src/pretix/control/templates/pretixcontrol/event/mail.html
@@ -14,6 +14,7 @@
             <legend>{% trans "E-mail content" %}</legend>
             {% bootstrap_field form.mail_text_order_placed layout="horizontal" %}
             {% bootstrap_field form.mail_text_order_paid layout="horizontal" %}
+            {% bootstrap_field form.mail_text_resend_link layout="horizontal" %}
         </fieldset>
         <fieldset>
             <legend>{% trans "SMTP settings" %}</legend>
