Refs #105 -- Variation support for vouchers

--- a/src/pretix/control/templates/pretixcontrol/vouchers/detail.html
+++ b/src/pretix/control/templates/pretixcontrol/vouchers/detail.html
@@ -19,7 +19,7 @@
             {% bootstrap_field form.block_quota layout="horizontal" %}
             {% bootstrap_field form.allow_ignore_quota layout="horizontal" %}
             {% bootstrap_field form.price layout="horizontal" %}
-            {% bootstrap_field form.item layout="horizontal" %}
+            {% bootstrap_field form.itemvar layout="horizontal" %}
 		</fieldset>
 		<div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
