Use columns on order detail page

--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -85,7 +85,7 @@
                                 {% if i.is_cancellation %}{% trans "Cancellation" %}{% else %}{% trans "Invoice" %}{% endif %}
                                 {{ i.number }}</a> ({{ i.date|date:"SHORT_DATE_FORMAT" }})
                             {% if forloop.revcounter0 > 0 %}
-                                <br />
+                                <br/>
                             {% endif %}
                         {% endfor %}
                     </dd>
@@ -93,7 +93,7 @@
             </dl>
         </div>
     </div>
-    <div class="panel panel-primary items">
+    <div class="panel panel-default items">
         <div class="panel-heading">
             <h3 class="panel-title">
                 {% trans "Ordered items" %}
@@ -174,53 +174,59 @@
             </div>
         </div>
     </div>
-    <div class="panel panel-primary items">
-        <div class="panel-heading">
-            <h3 class="panel-title">
-                {% trans "Payment information" %}
-            </h3>
-        </div>
-        <div class="panel-body">
-            {% if order.payment_manual %}
-                <div class="alert alert-info">
-                    {% trans "The payment state of this order was manually modified." %}
+    <div class="row">
+        <div class="{% if request.event.settings.invoice_address_asked %}col-md-6{% else %}col-md-12{% endif %}">
+            <div class="panel panel-default items">
+                <div class="panel-heading">
+                    <h3 class="panel-title">
+                        {% trans "Payment information" %}
+                    </h3>
                 </div>
-            {% endif %}
-            {{ payment }}
-            {% if order.status == 'n' %}
-                <p>{% blocktrans trimmed with date=order.expires %}
-                    The payment has to be completed before {{ date }}.
-                {% endblocktrans %}</p>
-            {% endif %}
-        </div>
-    </div>
-    {% if request.event.settings.invoice_address_asked %}
-        <div class="panel panel-primary">
-            <div class="panel-heading">
-                <h3 class="panel-title">
-                    {% trans "Invoice information" %}
-                </h3>
-            </div>
-            <div class="panel-body">
-                <dl class="dl-horizontal">
-                    <dt>{% trans "Company" %}</dt>
-                    <dd>{{ order.invoice_address.company }}</dd>
-                    <dt>{% trans "Name" %}</dt>
-                    <dd>{{ order.invoice_address.name }}</dd>
-                    <dt>{% trans "Address" %}</dt>
-                    <dd>{{ order.invoice_address.street|linebreaksbr }}</dd>
-                    <dt>{% trans "ZIP code and city" %}</dt>
-                    <dd>{{ order.invoice_address.zipcode }} {{ addr.city }}</dd>
-                    <dt>{% trans "Country" %}</dt>
-                    <dd>{{ order.invoice_address.country }}</dd>
-                    <dt>{% trans "Phone" %}</dt>
-                    <dd>{{ order.invoice_address.phone }}</dd>
-                    {% if request.event.settings.invoice_address_vatid %}
-                        <dt>{% trans "VAT ID" %}</dt>
-                        <dd>{{ order.invoice_address.vat_id }}</dd>
+                <div class="panel-body">
+                    {% if order.payment_manual %}
+                        <div class="alert alert-info">
+                            {% trans "The payment state of this order was manually modified." %}
+                        </div>
                     {% endif %}
-                </dl>
+                    {{ payment }}
+                    {% if order.status == 'n' %}
+                        <p>{% blocktrans trimmed with date=order.expires %}
+                            The payment has to be completed before {{ date }}.
+                        {% endblocktrans %}</p>
+                    {% endif %}
+                </div>
             </div>
         </div>
-    {% endif %}
+        {% if request.event.settings.invoice_address_asked %}
+            <div class="col-md-6">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">
+                            {% trans "Invoice information" %}
+                        </h3>
+                    </div>
+                    <div class="panel-body">
+                        <dl class="dl-horizontal">
+                            <dt>{% trans "Company" %}</dt>
+                            <dd>{{ order.invoice_address.company }}</dd>
+                            <dt>{% trans "Name" %}</dt>
+                            <dd>{{ order.invoice_address.name }}</dd>
+                            <dt>{% trans "Address" %}</dt>
+                            <dd>{{ order.invoice_address.street|linebreaksbr }}</dd>
+                            <dt>{% trans "ZIP code and city" %}</dt>
+                            <dd>{{ order.invoice_address.zipcode }} {{ addr.city }}</dd>
+                            <dt>{% trans "Country" %}</dt>
+                            <dd>{{ order.invoice_address.country }}</dd>
+                            <dt>{% trans "Phone" %}</dt>
+                            <dd>{{ order.invoice_address.phone }}</dd>
+                            {% if request.event.settings.invoice_address_vatid %}
+                                <dt>{% trans "VAT ID" %}</dt>
+                                <dd>{{ order.invoice_address.vat_id }}</dd>
+                            {% endif %}
+                        </dl>
+                    </div>
+                </div>
+            </div>
+        {% endif %}
+    </div>
 {% endblock %}
