Refs #126 -- Show order history

--- a/src/static/pretixcontrol/less/orders.less
+++ b/src/static/pretixcontrol/less/orders.less
@@ -16,6 +16,17 @@
         display: none;
     }
 }
+
 #sumtoggle {
     margin-top: 20px;
+}
+
+.logentry {
+    .meta {
+        font-size: 12px;
+        margin: 0 0 5px;
+    }
+    p:last-child {
+        margin-bottom: 0;
+    }
 }
