Added option to show remaining quota to users

--- a/src/pretix/control/templates/pretixcontrol/event/settings.html
+++ b/src/pretix/control/templates/pretixcontrol/event/settings.html
@@ -23,6 +23,7 @@
             {% bootstrap_field sform.show_times layout="horizontal" %}
             {% bootstrap_field sform.contact_mail layout="horizontal" %}
             {% bootstrap_field sform.imprint_url layout="horizontal" %}
+            {% bootstrap_field sform.show_quota_left layout="horizontal" %}
         </fieldset>
         <fieldset>
             <legend>{% trans "Timeline" %}</legend>
