--- a/src/pretix/presale/templates/pretixpresale/event/fragment_availability.html
+++ b/src/pretix/presale/templates/pretixpresale/event/fragment_availability.html
@@ -5,9 +5,9 @@
     </div>
 {% elif avail < 100 %}
     <div class="col-md-2 col-xs-6 availability-box unavailable">
-        <strong>{% trans "Unavailable" %}</strong><br />
+        <strong>{% trans "Reserved" %}</strong><br />
         <small>
-            {% trans "This item is currently unavailable but might become available again." %}
+            {% trans "All remaining products are reserved but might become available again." %}
         </small>
     </div>
 {% endif %}
