--- a/src/pretix/control/templates/pretixcontrol/items/fragment_quota_availability.html
+++ b/src/pretix/control/templates/pretixcontrol/items/fragment_quota_availability.html
@@ -9,7 +9,7 @@
         <span class="label label-success">{% trans "Unlimited" %}</span>
     {% endif %}
 {% elif availability.0 == 20 %}
-    <span class="label label-warning">{% trans "Sold out (or reserved)" %}</span>
+    <span class="label label-warning">{% trans "Fully reserved" %}</span>
 {% elif availability.0 == 0 %}
     <span class="label label-danger">{% trans "Sold out" %}</span>
 {% endif %}
