--- a/src/static/pretixpresale/less/event.less
+++ b/src/static/pretixpresale/less/event.less
@@ -10,6 +10,9 @@
     .input-item-count {
         text-align: center;
     }
+    .input-item-price {
+        text-align: right;
+    }
     .availability-box {
         text-align: center;
 
