--- a/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
+++ b/src/pretix/presale/templates/pretixpresale/event/fragment_cart.html
@@ -28,12 +28,17 @@
             <form action="{% eventurl event "presale:event.cart.remove" %}"
                     method="post" data-asynctask>
                 {% csrf_token %}
+
                 {% if line.variation %}
                     <input type="hidden" name="variation_{{ line.item.id }}_{{ line.variation.id }}"
                             value="1" />
+                    <input type="hidden" name="price_{{ line.item.id }}_{{ line.variation.id }}"
+                            value="{{ line.price }}" />
                 {% else %}
                     <input type="hidden" name="item_{{ line.item.id }}"
                             value="1" />
+                    <input type="hidden" name="price_{{ line.item.id }}"
+                            value="{{ line.price }}" />
                 {% endif %}
                 <button class="btn btn-mini btn-link"><i class="fa fa-minus"></i></button>
             </form>
@@ -46,9 +51,13 @@
                 {% if line.variation %}
                     <input type="hidden" name="variation_{{ line.item.id }}_{{ line.variation.id }}"
                         value="1" />
+                    <input type="hidden" name="price_{{ line.item.id }}_{{ line.variation.id }}"
+                            value="{{ line.price }}" />
                 {% else %}
                     <input type="hidden" name="item_{{ line.item.id }}"
                             value="1" />
+                    <input type="hidden" name="price_{{ line.item.id }}"
+                            value="{{ line.price }}" />
                 {% endif %}
                 <button class="btn btn-mini btn-link"><i class="fa fa-plus"></i></button>
             </form>
