Improved styling of price inputs

--- a/src/static/pretixpresale/less/event.less
+++ b/src/static/pretixpresale/less/event.less
@@ -10,6 +10,9 @@
     .input-item-count {
         text-align: center;
     }
+    .input-group-price {
+        margin-bottom: 3px;
+    }
     .input-item-price {
         text-align: right;
     }
