--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -102,7 +102,7 @@
                                             </div>
                                             <div class="col-md-2 col-xs-6 price">
                                                 {% if item.free_price %}
-                                                    <div class="input-group">
+                                                    <div class="input-group input-group-price">
                                                         <span class="input-group-addon">{{ event.currency }}</span>
                                                         <input type="number" class="form-control input-item-price"
                                                                 placeholder="0"
@@ -114,7 +114,6 @@
                                                     {{ event.currency }} {{ var.price|floatformat:2 }}
                                                 {% endif %}
                                                 {% if item.tax_rate %}
-                                                    <br/>
                                                     <small>{% blocktrans trimmed with rate=item.tax_rate %}
                                                         incl. {{ rate }}% taxes
                                                     {% endblocktrans %}</small>
@@ -154,7 +153,7 @@
                                 </div>
                                 <div class="col-md-2 col-xs-6 price">
                                     {% if item.free_price %}
-                                        <div class="input-group">
+                                        <div class="input-group input-group-price">
                                             <span class="input-group-addon">{{ event.currency }}</span>
                                             <input type="number" class="form-control input-item-price" placeholder="0"
                                                     min="{{ item.price|stringformat:"0.2f" }}"
@@ -165,7 +164,6 @@
                                         {{ event.currency }} {{ item.price|floatformat:2 }}
                                     {% endif %}
                                     {% if item.tax_rate %}
-                                        <br/>
                                         <small>{% blocktrans trimmed with rate=item.tax_rate %}
                                             incl. {{ rate }}% taxes
                                         {% endblocktrans %}</small>
