--- a/src/pretix/control/templates/pretixcontrol/items/quota.html
+++ b/src/pretix/control/templates/pretixcontrol/items/quota.html
@@ -3,48 +3,84 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Quota" %}{% endblock %}
 {% block inside %}
-	<h1>{% trans "Quota" %}</h1>
-	<form action="" method="post" class="form-horizontal">
-		{% csrf_token %}
-        {% bootstrap_form_errors form %}
-		<fieldset>
-			<legend>{% trans "General information" %}</legend>
-			{% bootstrap_field form.name layout="horizontal" %}
-			{% bootstrap_field form.size layout="horizontal" %}
-			<legend>{% trans "Items" %}</legend>
-            <p>
-                {% blocktrans trimmed %}
-                    Please select the products or product variations this quota should be applied to. If you apply two
-                    quotas to the same product, it will only be available if <strong>both</strong> quotas have capacity
-                    left.
-                {% endblocktrans %}
-            </p>
-            <div class="panel-group items-on-quota">
-                {% for item in items %}
-                    <div class="panel panel-default" data-formset-form>
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                <a data-toggle="collapse" data-parent="#accordion"
-                                   href="#collapse{{ item.id }}">
-                                    {{ item.name }}
-                                </a>
-                            </h4>
-                        </div>
-                        <div id="collapse{{ item.id }}" class="panel-collapse collapse in">
-                            <div class="panel-body">
-                                <div class="form-horizontal">
-                                    {% bootstrap_field item.field layout="horizontal" %}
+    <h1>{% trans "Quota" %}</h1>
+    <div class="row">
+        <div class="col-xs-12 {% if quota.pk and quota.size != None %}col-lg-9{% else %}col-lg-12{% endif %}">
+            <form action="" method="post" class="form-horizontal">
+                {% csrf_token %}
+                {% bootstrap_form_errors form %}
+                <fieldset>
+                    <legend>{% trans "General information" %}</legend>
+                    {% bootstrap_field form.name layout="horizontal" %}
+                    {% bootstrap_field form.size layout="horizontal" %}
+                    <legend>{% trans "Items" %}</legend>
+                    <p>
+                        {% blocktrans trimmed %}
+                            Please select the products or product variations this quota should be applied to. If you apply two
+                            quotas to the same product, it will only be available if
+                            <strong>both</strong> quotas have capacity
+                            left.
+                        {% endblocktrans %}
+                    </p>
+                    <div class="panel-group items-on-quota">
+                        {% for item in items %}
+                            <div class="panel panel-default" data-formset-form>
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                        <a data-toggle="collapse" data-parent="#accordion"
+                                                href="#collapse{{ item.id }}">
+                                            {{ item.name }}
+                                        </a>
+                                    </h4>
+                                </div>
+                                <div id="collapse{{ item.id }}" class="panel-collapse collapse in">
+                                    <div class="panel-body">
+                                        <div class="form-horizontal">
+                                            {% bootstrap_field item.field layout="horizontal" %}
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        {% endfor %}
                     </div>
-                {% endfor %}
+                </fieldset>
+            </form>
+        </div>
+        {% if quota.pk and quota.size != None %}
+            <div class="col-xs-12 col-lg-3">
+                <fieldset>
+                    <legend>{% trans "Availability calculation" %}</legend>
+                    <div class="row">
+                        <div class="col-xs-9">{% trans "Total quota" %}</div>
+                        <div class="col-xs-3 text-right">{{ quota.size }}</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-9">{% trans "Paid orders" %}</div>
+                        <div class="col-xs-3 text-right"> – {{ quota.count_paid_orders }}</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-9">{% trans "Pending orders" %}</div>
+                        <div class="col-xs-3 text-right"> – {{ quota.count_pending_orders }}</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-9">{% trans "Vouchers" %}</div>
+                        <div class="col-xs-3 text-right"> – {{ quota.count_blocking_vouchers }}</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-9">{% trans "Current user's carts" %}</div>
+                        <div class="col-xs-3 text-right"> – {{ quota.count_in_cart }}</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-9"><strong>{% trans "Current availability" %}</strong></div>
+                        <div class="col-xs-3 text-right"><strong>{{ quota.availability.1 }}</strong></div>
+                    </div>
+                </fieldset>
             </div>
-		</fieldset>
-		<div class="form-group submit-group">
-            <button type="submit" class="btn btn-primary btn-save">
-                {% trans "Save" %}
-            </button>
-		</div>
-	</form>
+        {% endif %}
+    </div>
+    <div class="form-group submit-group">
+        <button type="submit" class="btn btn-primary btn-save">
+            {% trans "Save" %}
+        </button>
+    </div>
 {% endblock %}
