--- a/src/pretix/control/templates/pretixcontrol/event/mail.html
+++ b/src/pretix/control/templates/pretixcontrol/event/mail.html
@@ -99,6 +99,20 @@
                         </div>
                     </div>
                 </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" href="#waiting_list">
+                                <strong>{% trans "Waiting list notification" %}</strong>
+                            </a>
+                        </h4>
+                    </div>
+                    <div id="waiting_list" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            {% bootstrap_field form.mail_text_waiting_list layout="horizontal" %}
+                        </div>
+                    </div>
+                </div>
             </div>
         </fieldset>
         <fieldset>
