--- a/src/pretix/control/templates/pretixcontrol/event/settings.html
+++ b/src/pretix/control/templates/pretixcontrol/event/settings.html
@@ -42,6 +42,12 @@
             {% bootstrap_field sform.attendee_names_required layout="horizontal" %}
             {% bootstrap_field sform.cancel_allow_user layout="horizontal" %}
         </fieldset>
+        <fieldset>
+            <legend>{% trans "Waiting list" %}</legend>
+            {% bootstrap_field sform.waiting_list_enabled layout="horizontal" %}
+            {% bootstrap_field sform.waiting_list_auto layout="horizontal" %}
+            {% bootstrap_field sform.waiting_list_hours layout="horizontal" %}
+        </fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
                 {% trans "Save" %}
