--- a/src/pretix/presale/templates/pretixpresale/event/fragment_availability.html
+++ b/src/pretix/presale/templates/pretixpresale/event/fragment_availability.html
@@ -1,13 +1,28 @@
 {% load i18n %}
+{% load eventurl %}
 {% if avail == 0 %}
     <div class="col-md-2 col-xs-6 availability-box gone">
         <strong>{% trans "SOLD OUT" %}</strong>
+        {% if event.settings.waiting_list_enabled %}
+            <br/>
+            <a href="{% eventurl event "presale:event.waitinglist" %}?item={{ item.pk }}{% if var %}&var={{ var.pk }}{% endif %}">
+                <span class="fa fa-plus-circle"></span>
+                {% trans "Waiting list" %}
+            </a>
+        {% endif %}
     </div>
 {% elif avail < 100 %}
     <div class="col-md-2 col-xs-6 availability-box unavailable">
-        <strong>{% trans "Reserved" %}</strong><br />
-        <small>
-            {% trans "All remaining products are reserved but might become available again." %}
-        </small>
+        <strong>{% trans "Reserved" %}
+            <span class="fa fa-info-circle" data-toggle="tooltip"
+                  title="{% trans "All remaining products are reserved but might become available again." %}"></span>
+        </strong>
+        {% if event.settings.waiting_list_enabled %}
+            <br/>
+            <a href="{% eventurl event "presale:event.waitinglist" %}?item={{ item.pk }}{% if var %}&var={{ var.pk }}{% endif %}">
+                <span class="fa fa-plus-circle"></span>
+                {% trans "Waiting list" %}
+            </a>
+        {% endif %}
     </div>
 {% endif %}
