--- a/src/pretix/presale/templates/pretixpresale/waiting.html
+++ b/src/pretix/presale/templates/pretixpresale/waiting.html
@@ -10,28 +10,20 @@
     {% endcompress %}
     {% compress js %}
         <script type="text/javascript" src="{% static "jquery/js/jquery-2.1.1.min.js" %}"></script>
+        <script type="text/javascript" src="{% static "pretixbase/js/ajaxpending.js" %}"></script>
     {% endcompress %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="refresh" content="1">
 </head>
 <body>
-<div class="container">
-    <i class="fa fa-cog big-rotating-icon"></i>
+    <div class="container">
+        <i class="fa fa-cog big-rotating-icon"></i>
 
-    <h1>{% trans "We are processing your request…" %}</h1>
+        <h1>{% trans "We are processing your request…" %}</h1>
 
-    <p>
-        {% trans "If this takes longer than a few minutes, please contact us." %}
-    </p>
-</div>
-<script type="text/javascript">
-    window.setInterval(function () {
-        $.get(location.href + '&ajax=1', function (data, status) {
-            if (data.ready && data.redirect) {
-                location.href = data.redirect;
-            }
-        }, 'json');
-    }, 2000);
-</script>
+        <p>
+            {% trans "If this takes longer than a few minutes, please contact us." %}
+        </p>
+    </div>
 </body>
 </html>
