--- a/src/pretix/control/templates/pretixcontrol/help/payment/fee_reverse.html
+++ b/src/pretix/control/templates/pretixcontrol/help/payment/fee_reverse.html
@@ -11,7 +11,7 @@
         <li>
             <strong>Method A: Calculate the fee from the subtotal and add it to the bill.</strong> For a ticket price of
             100 €, this will lead to the following calculation:
-            <table class="table" style="width: auto;">
+            <table class="table helper-width-auto">
                 <tr>
                     <td>Ticket price</td>
                     <td class="text-right">100.00 €</td>
@@ -37,7 +37,7 @@
         <li>
             <strong>Method B (default): Calculate the fee from the total value including the fee.</strong> For a ticket
             price of 100 €, this will lead to the following calculation:
-            <table class="table" style="width: auto;">
+            <table class="table helper-width-auto">
                 <tr>
                     <td>Ticket price</td>
                     <td class="text-right">100.00 €</td>
