--- a/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_confirm.html
+++ b/src/pretix/plugins/banktransfer/templates/pretixplugins/banktransfer/import_confirm.html
@@ -46,7 +46,7 @@
             <input type="hidden" name="confirm" value="true" />
 
         </table>
-        <button class="btn btn-primary btn-lg pull-right" type="submit" style="margin-bottom: 10px">
+        <button class="btn btn-primary btn-lg pull-right helper-space-below" type="submit">
             <span class="icon icon-upload"></span> {% trans "Confirm" %}
         </button>
         <div class="clearfix"></div>
