--- a/src/static/pretixcontrol/scss/main.scss
+++ b/src/static/pretixcontrol/scss/main.scss
@@ -154,3 +154,13 @@ h1 .btn-sm {
     }
 
 }
+
+.helper-display-inline {
+    display: inline !important;
+}
+.helper-width-auto {
+    width: auto;
+}
+.helper-space-below {
+    margin-bottom: 10px;
+}
