Enable stripe when retrying payments

--- a/src/pretix/presale/templates/pretixpresale/event/order_pay.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order_pay.html
@@ -11,7 +11,7 @@
 
     <form method="post" class="form-horizontal" href="">
         {% csrf_token %}
-        <div class="form-horizontal">
+        <div class="form-horizontal payment-redo-form">
             {{ form }}
         </div>
         <div class="row checkout-button-row">
