--- a/src/pretix/control/templates/pretixcontrol/vouchers/delete.html
+++ b/src/pretix/control/templates/pretixcontrol/vouchers/delete.html
@@ -6,21 +6,14 @@
     <h1>{% trans "Delete voucher" %}</h1>
     <form action="" method="post" class="form-horizontal">
         {% csrf_token %}
-        {% if not allowed %}
-            <p>{% trans "You can not delete this voucher after it has been redeemed" %}</p>
-        {% else %}
-            <p>{% blocktrans %}Are you sure you want to delete the voucher
-                <strong>{{ voucher }}</strong>?{% endblocktrans %}</p>
-        {% endif %}
+        <p>{% blocktrans %}Are you sure you want to delete the voucher <strong>{{ voucher }}</strong>?{% endblocktrans %}</p>
         <div class="form-group submit-group">
             <a href="{% url "control:event.vouchers" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default btn-cancel">
                 {% trans "Cancel" %}
             </a>
-            {% if allowed %}
-                <button type="submit" class="btn btn-danger btn-save">
-                    {% trans "Delete" %}
-                </button>
-            {% endif %}
+            <button type="submit" class="btn btn-danger btn-save">
+                {% trans "Delete" %}
+            </button>
         </div>
     </form>
 {% endblock %}
